--- a/assets/sass/modules/_global-header.scss
+++ b/assets/sass/modules/_global-header.scss
@@ -47,6 +47,7 @@ header {
     -moz-appearance: none;
     -webkit-appearance: none;
     border: 0;
+    background-color: transparent;
     font-family: inherit;
     font-size: 100%;
     font-weight: 400;
